# wrangle-ai

./: .gitignore  README.md  pyproject.toml
docs/: curator.md
examples/curator/: agent.py  bell.py  doer_curate.py  fetch_indico.py  handler.py  interests.sample.txt  prompt.md  run_demo.py  server.py  store.py  submit.py
examples/curator/extension/: manifest.json  popup.html  popup.js
src/wrangle_ai/: __init__.py  protocols.py  worker.py  wrangler.py
