[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wrangle-ai"
version = "0.0.1"
description = "Persistent credentialed agent for harnessed LLM and script work — event-driven, bounded, self-healing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Torre Wenaus" }]
keywords = ["llm", "agent", "worker", "harness", "executor", "claude"]
dependencies = []

[project.urls]
Homepage = "https://github.com/BNLNPPS/wrangle-ai"

[tool.setuptools.packages.find]
where = ["src"]
